--- a/timkiem.html
+++ b/timkiem.html
@@ -53,9 +53,7 @@
     </header>
     <main class="one-col">
       <article class="main-content">
-        <div id="searchDetail">
-          <h1></h1>
-        </div>
+        <h1 id="searchDetail"></h1>
       </article>
     </main>
     <footer>
